- page fill-available removal (try iOS distorted rendering fix)

--- a/web/app/themes/Foody/resources/sass/_normalize.scss
+++ b/web/app/themes/Foody/resources/sass/_normalize.scss
@@ -70,7 +70,7 @@ html, body, .container-fluid {
 //noinspection CssInvalidPropertyValue
 #page {
   height: 100%;
-  min-height: stretch;
+  //min-height: stretch;
 }
 
 /**
